test/errors/executor/runtime_not_lvalue.ms
1 = a
// Runtime Error: not an lvalue
